# stonky-tonks

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
data-handler/: Cargo.toml
data-handler/src/: calculate_balances.rs  fetch_prices.rs  main.rs
data-retriever/: Cargo.toml
data-retriever/migrations/2021-02-18-031159_create_db/: down.sql  up.sql
data-retriever/src/: main.rs  models.rs  schema.rs
db/: .dockerignore  .env  Cargo.toml  setup-db.sh
db/migrations/2021-02-20-052033_create_db/: down.sql  up.sql
db/migrations/2021-03-01-044738_create_users/: down.sql  up.sql
db/migrations/2021-03-04-034629_add_capital/: down.sql  up.sql
db/migrations/2021-03-10-013741_id_modification/: down.sql  up.sql
db/migrations/2021-03-10-021506_add_holding_quantity/: down.sql  up.sql
db/migrations/2021-03-11-005638_holdings_composite_id/: down.sql  up.sql
db/migrations/2021-03-13-041538_add_transaction_recording/: up.sql
db/migrations/2021-03-14-004121_create_offers/: down.sql  up.sql
db/migrations/2021-03-23-231404_balance_history/: down.sql  up.sql
db/src/: balance_models.rs  holdings_models.rs  lib.rs  models.rs  offers_models.rs  schema.rs  stockprice_models.rs  transactions_models.rs  user_models.rs
webserver/: Cargo.toml
webserver/backend/: Cargo.toml
webserver/src/: holdings.rs  main.rs  prices.rs  user.rs
webserver/test/: holding.js  package.json
webserver/ui/: package.json
webserver/ui/src/: App.tsx  index.tsx  serviceWorker.ts
webserver/ui/src/app/: store.ts
webserver/ui/src/features/counter/: Counter.module.d.ts  counterSlice.ts
webserver/ui/src/features/priceTable/: PriceTable.tsx  priceSlice.ts
