[package]
name = "data-handler"
version = "0.1.0"
authors = [ "benfenny <benfenny@protonmail.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
futures = "0.3.12"
reqwest = { version = "0.11.0", features = [ "default", "gzip", "json" ] }
tokio = { version = "1.2.0", features = [ "full" ] }
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
db = { path = "../db" }
