[package]
name = "data-retriever"
version = "0.1.0"
authors = [ "benfenny <benfenny@protonmail.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
reqwest = { version = "0.11.0", features = [ "default", "gzip", "json" ] }
tokio = { version = "1.2.0", features = [ "full" ] }
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
diesel = { version = "1.4.5", features = [ "sqlite", "uuidv07" ] }
dotenv = "0.15.0"
uuid = { version = "0.8", default-features = false, features = ["v4"] }
