[package]
name = "db"
version = "0.1.0"
authors = ["benfenny <benfenny@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = [ "serde" ] }
diesel = { version = "1.4.5", features = [ "chrono", "sqlite", "uuidv07" ] }
dotenv = "0.15.0"
uuid = { version = "0.8", default-features = false, features = ["v4"] }
serde = { version = "1.0", features = [ "derive" ] }