[package]
name = "webserver"
version = "0.1.0"
authors = ["benfenny <benfenny@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
db = { path = "../db" }
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
qstring = "0.7.2"